src/test/deca/context/invalid/created/decl_type_inconnu.deca
{
typeInconnu a; //typeInconnu n'est pas pas un type de base
}